--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">   
     <script src="https://use.fontawesome.com/d3c49c6dd3.js"></script>
 
-    <title>React App</title>
+    <title>Readable</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
